--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -23,6 +23,8 @@ task testGroups (type: Test) {
         systemProperty 'browser', "${browser}"}
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"}
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"}
 }
 task testContacts (type: Test) {
     useTestNG(){
@@ -32,4 +34,6 @@ task testContacts (type: Test) {
         systemProperty 'browser', "${browser}"}
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"}
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"}
 }
