--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 .idea/workspace.xml
 *.log
+mantis-tests/chromedriver
+mantis-tests/chromedriver.exe
