--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -21,6 +21,8 @@ task testGroups (type: Test) {
     }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"}
+    if (project.hasProperty('platform')) {
+        systemProperty 'platform', "${platform}"}
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"}
     if (project.hasProperty('verifyUI')) {
@@ -32,6 +34,8 @@ task testContacts (type: Test) {
     }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"}
+    if (project.hasProperty('platform')) {
+        systemProperty 'platform', "${platform}"}
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"}
     if (project.hasProperty('verifyUI')) {
